Loc update-Dec21

--- a/learn-certs-pr/TOC.yml
+++ b/learn-certs-pr/TOC.yml
@@ -44,7 +44,9 @@
     href: exam-item-challenge-process.md
   - name: Beta-Prüfungen
     href: beta-exams.md
-  - name: College-Kredit für Zertifizierungsprüfungen
+  - name: ACE College-Gutschriften für Zertifizierungsprüfungen 
+    href: ace-credit-for-certification-exams.md
+  - name: NCCRS College-Gutschriften für Zertifizierungsprüfungen 
     href: college-credit-for-certification-exams.md
   - name: Studentenermäßigungen
     href: student-discounts.md
