--- a/learn-certs-pr/courses/mb-220t00.yml
+++ b/learn-certs-pr/courses/mb-220t00.yml
@@ -32,126 +32,99 @@ summary: |-
   In diesem Kurs wird die Konfiguration der Marketinganwendung besprochen, die für das Geschäftswachstum erforderlich ist. Dabei wird sich auch mit Lead-Management, Marketingformularen und -seiten, Segmentierung und E-Mail-Marketing-Nachrichten befasst. Alle diese Teile sind durch interaktives Customer-Journey-Design miteinander verbunden, einschließlich der Konfiguration von Veranstaltungen und Umfragen.
 
   #### Zielgruppenprofil
-  Dieser Kurs richtet sich an IT- oder Marketingfachleute, die lernen möchten, wie Dynamics 365 für Marketing für Unternehmen eingesetzt werden kann.
+  Dieser Kurs richtet sich an IT- oder Marketingfachleute, die lernen möchten, wie Dynamics 365 Marketing für Unternehmen eingesetzt werden kann.
 prerequisitesSection: |-
   Kenntnisse der Dynamics 365-Plattform und Verständnis der grundlegenden Marketingprinzipien.
 outlineSection: |-
-  ### Modul 1&#58; Marketing-Anwendungskonfiguration
-  In diesem Modul lernen sie erweiterte Einstellungen, Marketinginhalte, Vorlagen und Integrationen in Dynamics 365 für Marketing kennen.
+  ### Modul 1&#58; Konfigurieren Sie Dynamics 365 Marketing
+  In diesem Modul erfahren Sie mehr über erweiterte Einstellungen, Marketinginhalte, Vorlagen und Integrationen in Dynamics 365 für Marketing.
   #### Lektionen
-  - Erweiterte Einstellungen konfigurieren
-  - Verwalten von Marketing-Inhalten und Vorlagen
-  - Verwalten von LinkedIn- und Power BI-Integrationen
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Konfigurieren Sie erweiterte Einstellungen wie Organisation, Geschäftsverwaltung und Inhalte.
+  - Konfigurieren von Organisations- und Verwaltungseinstellungen
+  - Konfigurieren von Marketingeinstellungen
+  - Konfigurieren von Ereigniseinstellungen
+  
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
+  - erweiterte Einstellungen wie Organisation, Geschäftsverwaltung und Inhalte zu konfigurieren.
   - Verwalten von Marketing-Inhalten und Vorlagen.
-
-
-  ### Modul 2&#58; Leads
-  In diesem Modul erfahren Sie, wie Sie Leads erstellen, verwalten und bewerten.
+  
+  ### Modul 2&#58; Segmente und Listen verwalten
+  In diesem Modul wird erläutert, wie Sie Segmente und Abonnementcenter erstellen verwalten und verwenden können.
   #### Lektionen
-  - Leads erstellen und verwalten
-  - Beurteilung der Verkaufsbereitschaft
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Leads erstellen und verwalten.
-  - Leads von LinkedIn synchronisieren.
-  - Bewertung der Verkaufsbereitschaft anhand von Modellen zur Bewertung der Leads.
-
-
-  ### Modul 3&#58; Marketingformulare und -seiten
+  - Segmente erstellen und verwalten
+  - Erstellen und verwalten von Abonnement-Centern und Listen
+  
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
+  - Segmente zu erstellen und zu verwalten.
+  - Abonnement-Center zu erstellen und zu verwalten.
+  
+  ### Modul 3&#58; Marketingformulare und -seiten verwalten
   In diesem Modul erfahren Sie, wie Sie Marketingformulare und -seiten erstellen.
   #### Lektionen
-  - Erstellen von Marketingformen
-  - Erstellen von Marketingseiten
-  - Verwalten von Internet-Marketing
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Erstellen Sie Marketingformen und binden Sie sie in Marketingseiten ein.
+  - Formulare verwalten
+  - Marketing-Seiten verwalten
+  
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58; 
+  - Marketingformulare zu erstellen und sie in die Marketing-Seiten einzubinden.
   - Erstellen einer Marketingseite.
-  - Vorschau, Validierung und Live-Schaltung einer Marketingseite
-  - Erstellen von Marketingformen und Seitenvorlagen.
-
-
-  ### Modul 4&#58; Segmente und Listen
-  Dieses Modul behandelt die Verwaltung von Segmenten, Abonnements-Centern, Listen und Double-Opt-Ins.
+  - Vorschau, Validierung und Live-Schaltung einer Marketingseite.
+  - Erstellen von Marketingformularen und Seitenvorlagen.
+  
+  ### Modul 4&#58; Verwalten Sie Leads, Accounts und Kontakte
+  In diesem Modul erfahren Sie, wie Sie Kunden als Accounts oder Kontakte verwalten und sie über den Lebenszyklus des Leads hinaus pflegen.
   #### Lektionen
-  - Anlegen und Verwalten von Segmenten
-  - Erstellen und verwalten Sie Abonnement-Center
-  - Double opt-in
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Konfigurieren statischer und dynamischer Segmente.
-  - Erstellen einer Abonnementliste.
-  - Einrichten einer Abonnement-Center-Seite ein.
-  - Einrichten und aktivieren eines Double-Opt-In-Prozesses.
-
-
-  ### Modul 5&#58; Marketing-E-Mails
-  In diesem Modul erfahren Sie, wie Sie E-Mail-Nachrichten in Dynamics 365 für Marketing erstellen.
+  - Leads erstellen und verwalten
+  - Konten und Kontakte verwalten
+  
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
+  - Kunden als Accounts oder Kontakte zu verfolgen.
+  - einen Lead zu erstellen und ihn in eine Chance umzuwandeln.
+  - Leads während ihres Lebenszyklus zu verwalten. 
+  
+  ### Modul 5&#58; Verwalten von Marketing-E-Mails und Kundenreisen
+  In diesem Modul wird beschrieben, wie Sie E-Mail-Nachrichten und Kundenreisen in Dynamics 365 Marketing erstellen.
   #### Lektionen
-  - E-Mail-Nachricht erstellen
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Erstellen und Gestalten von E-Mail-Nachrichten.
-  - Vorschau, Validierung und Inbetriebnahme von E-Mail-Nachrichten
-  - Speichern einer E-Mail-Nachricht als Vorlage.
-
-
-  ### Modul 6&#58; Customer Journeys
-  In diesem Modul wird der Erstellungsprozess für Customer Journeys überprüft.
+  - Erstellen von Marketing-E-Mails
+  - Kundenreisen erstellen
+  
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
+  - E-Mail-Nachrichten zu erstellen und gestalten.
+  - Vorschau, Validierung und Inbetriebnahme von E-Mail-Nachrichten vorzunehmen.
+  - eine E-Mail-Nachricht als Vorlage zu speichern.
+  - eine Kundenreise zu erstellen.
+  
+  ### Modul 6&#58; Ereignisse verwalten
+  Dieses Modul überprüft den Erstellungsprozess der Kundenreise.
   #### Lektionen
-  - Erstellen Sie Customer Journeys
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Erstellen einer Customer Journey aus einer Vorlage.
-  - Identifizieren von Customer-Journey-Teilen und -Eigenschaften.
-  - Mit einer Customer Journey live gehen und sie validieren.
-  - Erstellen Sie eine account-basierte Customer Journey.
-  - Verstehen der Marketingkalenderfunktionen.
-
-
-  ### Modul 7&#58; Einblicke
-  Dieses Modul zeigt, wie Kundenerkenntnisse angezeigt, verstanden und verwaltet werden.
+  - Erstellen einer Veranstaltung vor Ort
+  - Erstellen einer Webinar-Veranstaltung
+  - Förderung und Verwaltung von Veranstaltungen
+  
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
+  - eine Webinar-Veranstaltung zu erstellen.
+  - eine Veranstaltung vor Ort zu erstellen.
+  - eine Veranstaltung zu bewerben.
+  - die Event-Website zu verwalten.
+  - die Ereigniseinstellungen zu konfigurieren.
+  
+  ### Modul 7&#58; Erstellen Sie Umfragen mit Dynamics 365 Customer Voice
+  In diesem Modul wird gezeigt, wie Umfragen erstellt und an Kunden weitergeleitet werden.
   #### Lektionen
-  - Marketingerkenntnisse
-  - Kundenerkenntnisse
-  - Einblicke in die Marketingumsetzung
-  - Lead-Management-Erkenntnisse
-  - Internet-Marketing-Erkenntnisse
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Erkenntnisse lokalisieren.
-  - Verstehen Sie Marketing-Erkenntnisse wie Kontakt, Segment, Customer Journey, Marketing-E-Mail und Leads.
-
-
-  ### Modul 8&#58; Veranstaltungen
-  In diesem Modul lernen Sie, wie Sie die Eventplanung und -ausführung in Dynamics 365 für Marketing verwalten.
+  - Erstellen eines Umfrageprojekts
+  - Erstellen von Umfragen mit Dynamics 365 Customer Voice
+  - Aussenden von Dynamics 365 Customer Voice-Umfragen
+  
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
+  -Umfragen mit Hilfe von Projekten zu verwalten.
+  - eine Umfrage zu erstellen.
+  - eine Umfrage zu personalisieren.
+  - eine Umfrage an Kunden weiterzuleiten.
+  
+  ### Modul 8&#58; Analysieren Sie Erkenntnisse in Dynamics 365 Marketing
+  In diesem Modul erfahren Sie, wie Sie mit Hilfe von Erkenntnissen Daten zu Ihren Marketinginitiativen anzeigen und analysieren.
   #### Lektionen
-  - Eventplanung verwalten
-  - Verwalten der Eventausführung
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Persönliche Veranstaltungen und Webinare erstellen.
-  - Einrichten von Funktionen für die Veranstaltungsplanung, z. B. Sitzungen, Redner, Veranstaltungspässe, Wartelisten, Veranstaltungsorte und Sponsoren.
-  - Erstellen und verwalten wiederkehrender Ereignisse.
-
-
-  ### Modul 9&#58; Umfragen
-  In diesem Modul werden sie überdenken, wie sie Umfragen in Dynamics 365 für Marketing konfigurieren, entwerfen und verteilen.
-  #### Lektionen
-  - Erstellen von Umfragen
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Ein wiederverwendbares Umfragethema erstellen.
-  - Erstellen, Gestalten, Voransicht und Veröffentlichen einer Umfrage
-
-
-  ### Modul 10&#58; Ergebnisse
-  Im Modul Ergebnisse überprüfen sie Marketingereignisse und Umfrageergebnisse.
-  #### Lektionen
-  - Überprüfen der Ergebnisse von Events und Umfragen
-
-  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Nutzen Sie das Event-Dashboard zur Bewertung von Eventergebnissen.
+  - Bewerten von Marketinginitiativen mit Analytics
+  
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
+  - Erkenntnisse zu verwenden, um Entscheidungen über Marketingbemühungen zu treffen.
+  - Leads zu erzielen.
+  - Erkenntnisse zu Kundenreisen und E-Mail-Nachrichten zu überprüfen
