--- a/learn-certs-pr/courses/mb-330t00.yml
+++ b/learn-certs-pr/courses/mb-330t00.yml
@@ -30,7 +30,24 @@ summary: |-
   Dieser Kurs richtet sich an den Funktionsberater von Dynamics 365 Supply Chain Management. Der Funktionsberater von Dynamics 365 Supply Chain Management ist eine wichtige Ressource, mit der Apps so entworfen und konfiguriert werden, dass sie den Anforderungen eines Kunden entsprechen. Der Funktionsberater analysiert die Geschäftsanforderungen und übersetzt diese Anforderungen in vollständig realisierte Geschäftsprozesse und -lösungen, die von der Industrie empfohlene Praktiken implementieren. Der Funktionsberater ist auf einen oder mehrere der folgenden Funktionssätze von Dynamics&#58; Finanz-, Fertigungs- oder Supply Chain Management. Sie arbeiten mit Architekten, Entwicklern, Administratoren und anderen Interessengruppen zusammen, um Lösungen zu liefern, die die Anforderungen ihrer Kunden erfüllen oder übertreffen. 
 outlineSection: |-
   ### Modul 1&#58; Implementieren Sie das Produktinformationsmanagement
-  Dieses Modul führt Sie in die folgenden Themen ein: Erstellen und Freigeben von Produkten und Produktvarianten. Erstellen und Anwenden von Produktvorlagen. Erstellen von Stücklisten. Ermitteln des Zwecks und der Funktionen der Produktkonfigurationsmodelle. Konfigurieren von Fanggewichten. Konfigurieren von Direktlieferungsprodukten. Erstellen und Verwalten von Inventardimensionen. Konfigurieren von Artikelgruppen. Erstellen und Zuweisen von Barcodes und GTIN-Codes (Global Trade Identification Number) Konfigurieren von Kategoriehierarchien und Produktattributen. Konfigurieren von Umrechnungen von Produkteinheiten. Konfigurieren von Standardauftragseinstellungen. Beschreiben von Methoden und Modellgruppen für Bestandskalkulationen. Konfigurieren von Kalkulationsversionen für Standard- und geplante Kosten. Konfigurieren und Standardkaufpreise, Standardverkaufspreise und Handelsabkommen.
+  Dieses Modul führt Sie in die folgenden Themen ein:
+
+  Erstellen und Freigeben von Produkten und Produktvarianten.  
+  Erstellen und Anwenden von Produktvorlagen.  
+  Erstellen von Stücklisten.  
+  Ermitteln des Zwecks und der Funktionen der Produktkonfigurationsmodelle.  
+  Konfigurieren von Fanggewichten.  
+  Konfigurieren von Direktlieferungsprodukten.  
+  Erstellen und Verwalten von Inventardimensionen.  
+  Konfigurieren von Artikelgruppen.  
+  Erstellen und Zuweisen von Barcodes und GTIN-Codes (Global Trade Identification Number)  
+  Konfigurieren von Kategoriehierarchien und Produktattributen.  
+  Konfigurieren von Umrechnungen von Produkteinheiten.  
+  Konfigurieren von Standardauftragseinstellungen.  
+  Beschreiben von Methoden und Modellgruppen für Bestandskalkulationen.  
+  Konfigurieren von Kalkulationsversionen für Standard- und geplante Kosten.  
+  Konfigurieren und Standardkaufpreise, Standardverkaufspreise und Handelsabkommen.
+
   #### Lektionen
   - Produkte erstellen und verwalten
   - Konfigurieren Sie Produkte für das Supply Chain Management
@@ -41,7 +58,16 @@ outlineSection: |-
 
 
   ### Modul 2&#58; Implementieren Sie die Bestandsverwaltung
-  Dieses Modul führt Sie in die folgenden Bereiche ein&#58; Einrichten von Bestandsverwaltungsparametern und -journalen. Konfigurieren der Bestandsaufschlüsselungsstruktur. Konfigurieren von ABC-Klassifizierungen Konfigurieren von Bestandsbewertungsberichten. Erstellen und Verarbeiten von Journalen, einschließlich Stücklisten-, Artikelankunfts-, Transfer-, Verschiebungs-, Bestandsanpassungs-, Zähl- und Tag-Zähljournalen. Erstellen und Verarbeiten von Überweisungsaufträgen. Führen Sie Inventarschließungen und -anpassungen durch.
+  Dieses Modul führt Sie in die folgenden Bereiche ein&#58; 
+  
+  Richten Sie Parameter und Journale für die Bestandsverwaltung ein
+  Konfigurieren Sie die Struktur der Bestandsaufschlüsselung
+  Konfigurieren Sie ABC-Klassifizierungen
+  Konfigurieren Sie Bestandsbewertungsberichte
+  Erstellen und verarbeiten Sie Journale, einschließlich Stücklisten, Artikelankunft, Übertragung, Bewegung, Bestandsanpassung, Zählung und Tag-Zähljournale
+  Legen Sie Transportaufträge an und bearbeiten diese
+  Führen Sie Inventarschließungen und -anpassungen durch.
+
   #### Lektionen
   - Konfigurieren Sie die Bestandsverwaltung
   - Verwalten und Verarbeiten von Inventaraktivitäten
@@ -61,7 +87,24 @@ outlineSection: |-
 
 
   ### Modul 3&#58; Implementieren und verwalten von Supply-Chain-Prozessen
-  Dieses Modul führt Sie in die folgenden Themen ein&#58; Erstellen und Verwalten von Bestellanforderungen, Angebotsanfragen (RFQs) und Bestellungen (POs) Konfigurieren von Änderungsmanagementprozessen. Konfigurieren und Anwenden von Lieferantenrabatten. Einführung in die Lieferantenzusammenarbeit. Verwalten des Konsignationsbestands. Verwalten von Über- und Unterbelieferungen. Konfigurieren von Beschaffungskategorien und Einkaufsrichtlinien. Konfigurieren von Gebühren. Konfigurieren von Angeboten, Kundenaufträgen und Rückgabeaufträgen. Konfigurieren von Verkaufsgruppen und Provisionen. Konfigurieren von Kunden-, Produkt- und Interessentensuchen. Konfigurieren und Verarbeiten von unternehmensübergreifenden Handelsbeziehungsdokumenten. Einführung in D365-Handbücher. Erstellen von D365-Guides Betrieb von D365-Guides.
+  Dieses Modul führt Sie in die folgenden Themen ein&#58; 
+  
+  Erstellen und Verwalten von Bestellanforderungen, Angebotsanfragen (RFQs) und Bestellungen (POs)  
+  Konfigurieren von Änderungsmanagementprozesse  
+  Konfigurieren und Anwenden von Lieferantenrabatten  
+  Einführung in die Zusammenarbeit mit Anbietern
+  Konsignationsbestand verwalten  
+  Über- und Unterlieferungen verwalten  
+  Konfigurieren Sie Beschaffungskategorien und Einkaufsrichtlinien  
+  Gebühren konfigurieren  
+  Angebote, Kundenaufträge und Rücksendungen konfigurieren  
+  Konfigurieren von Verkaufsgruppen und Provisionen  
+  Konfigurieren von Kunden-, Produkt- und Interessentensuche  
+  Konfigurieren und verarbeiten von unternehmensübergreifenden Handelsbeziehungsdokumenten  
+  Einführung in D365-Handbücher  
+  Verfassen von D365-Handbüchern  
+  Bedienung von D365-Führungen.
+
   #### Lektionen
   - Beschaffung und Beschaffung implementieren
   - Implementieren Sie allgemeine Vertriebs- und Marketingfunktionen
@@ -89,7 +132,27 @@ outlineSection: |-
 
 
   ### Modul 4&#58; Implementieren Sie Lagerverwaltung und Transportmanagement
-  Dieses Modul führt Sie in die folgenden Themen ein&#58; Erstellen von Standorten, Lagern, Standorten, Standortformaten, Standortprofilen, Standorttypen und Zonen. Implementieren von Standortanweisungen. Konfigurieren von Inventarstatus, Einheitensequenzgruppen und Reservierungshierarchien. Implementieren von Wave- und Work-Vorlagen. Implementieren von Wave Load Building-Vorlagen. Konfigurieren von Menüs für mobile Geräte, Menüelemente und Anzeigeeinstellungen. Verwalten von Lagerbestandsbewegungsprozessen. Durchführen der Zykluszählung. Durchführen eingehender und ausgehender Bestellungen. Verarbeiten von Sendungen. Beschreiben des Nachschubprozesses. Cross-Docking Einführung. Konfigurieren von Spediteuren und Spediteurgruppen. Durchführen der Planung und Ausführung von Ladungen und Sendungen. Konfigurieren und Generieren von Frachtrechnungen und Rechnungen. Konfigurieren von Routenplänen und Anleitungen. Konfigurieren von Routen- und Raten-Engines. Konfigurieren und Verwenden der Dock-Terminplanung.
+  Dieses Modul führt Sie in die folgenden Themen ein&#58; 
+  
+  Erstellen von Standorten, Lagern, Standorten, Standortformaten, Standortprofilen, Standorttypen und Zonen  
+  Implementieren von Standortanweisungen  
+  Konfigurieren von Inventarstatus, Einheitensequenzgruppen und Reservierungshierarchien  
+  Implementieren von Wave- und Work-Vorlagen  
+  Implementieren einer Vorlage zum Aufbau von Wellenlasten  
+  Konfigurieren von Menüs, Menüelementen und Anzeigeeinstellungen für mobile Geräte  
+  Verwalten von Lagerbestandsbewegungsprozessen
+  Durchführen einer Zykluszählung  
+  Eingehende und ausgehende Bestellungen bearbeiten  
+  Sendungen verarbeiten  
+  Beschreiben des Cross-Docking des Nachschubprozesses  
+  Einführung  
+  Konfigurieren von Spediteuren und Spediteurgruppen  
+  Planung und Ausführung von Ladungen und Sendungen durchführen  
+  Konfigurieren und generieren von Frachtrechnungen und Rechnungen  
+  Konfigurieren von Routenplänen und Anleitungen  
+  Konfigurieren von Routen- und Rate-Engines  
+  Konfigurieren und verwenden der Dock-Terminplanung  
+
   #### Lektionen
   - Konfigurieren der Lagerverwaltung
   - Lagerverwaltungsprozesse durchführen
@@ -122,7 +185,13 @@ outlineSection: |-
 
 
   ### Modul 5&#58; Konfigurieren und verwalten der Qualitätskontrolle und das Qualitätsmanagement
-  Dieses Modul führt Sie in die folgenden Themen ein&#58; Konfigurieren der Qualitätskontrolle. Konfigurieren des Qualitätsmanagements. Verwalten von Qualitätsaufträgen und Quarantänebestellungen.  Verwalten der Bestandsblockierung.
+  Dieses Modul führt Sie in die folgenden Themen ein&#58; 
+  
+  Konfigurieren der Qualitätskontrolle  
+  Konfigurieren des Qualitätsmanagements  
+  Qualitätsaufträge und Quarantäneaufträge verwalten  
+  Die Inventarsperre verwalten
+
   #### Lektionen
   - Konfigurieren Sie die Qualitätskontrolle und das Qualitätsmanagement
   - Qualitätskontrolle und Qualitätsmanagement verwalten
@@ -139,7 +208,19 @@ outlineSection: |-
 
 
   ### Modul 6&#58; Masterplanung implementieren
-  Dieses Modul führt Sie in die folgenden Themen ein&#58; Unterscheiden zwischen Planungsoptimierung und Masterplanung. Einrichten von Abdeckungsgruppen und Artikelabdeckung. Konfigurieren von Masterplanungsparametern, Masterplan, Prognoseplänen und Kontinuitätsplänen. Unterscheiden zwischen Aktionsnachrichten, Verzögerungsnachrichten, Zeitzäunen und negativen Tagen. Verarbeiten und Anzeigen von Planaufträgen. Einrichten und Verwenden des Lieferplanformulars. Konfigurieren und Verarbeiten von Sicherheitsbestandsjournalen. Einrichten und Implementieren der unternehmensübergreifenden Masterplanung. Implementieren der Bedarfsbasisprognose. Implementieren der Planungsoptimierung.
+  Dieses Modul führt Sie in die folgenden Themen ein&#58; 
+  
+  Zwischen Planungsoptimierung und Masterplanung unterscheiden  
+  Abdeckungsgruppen und Artikelabdeckung einrichten  
+  Masterplanungsparameter, Masterplan, Prognosepläne und Kontinuitätspläne konfigurieren  
+  Zwischen Aktionsnachrichten, Verzögerungsnachrichten, Zeitzäunen und negativen Tagen unterscheiden  
+  Planaufträge bearbeiten und anzeigen
+  Das Formular „Lieferplan" einrichten und verwenden  
+  Sicherheitsbestandsjournale konfigurieren und verarbeiten  
+  Unternehmensübergreifende Masterplanung einrichten und implementieren  
+  Bedarfsprognosen implementieren  
+  Planungsoptimierung implementieren  
+
   #### Lektionen
   - Konfigurieren einer Masterplanung und -prognose
   - Durchführen von Masterplänen und verwalten der geplanten Aufträge
