--- a/learn-certs-pr/exams/az-204.yml
+++ b/learn-certs-pr/exams/az-204.yml
@@ -18,6 +18,8 @@ summary: |-
   Azure-Entwickler arbeiten mit Cloud-Lösungsarchitekten, Cloud-Datenbankadministratoren (DBAs), Cloud-Administratoren und Clients zusammen, um Lösungen zu implementieren.
 
   Ein Kandidat für dieses examens sollte über 1-2 Jahre Berufserfahrung und Erfahrung mit Microsoft Azure verfügen. Darüber hinaus sollte jemand in dieser Rolle über die Fähigkeit verfügen, in einer von Azure unterstützten Sprache zu programmieren und über Kenntnisse in Azure SDKs, Azure PowerShell, Azure CLI, Datenspeicheroptionen, Datenverbindungen, APIs, App-Authentifizierung und -Autorisierung, Computer- und Containerbereitstellung, Debugging und Leistungsoptimierung und Überwachung verfügen.
+
+  Wenn Sie diese Zertifizierungsprüfung bestehen, haben Sie möglicherweise Anspruch auf Anrechnung beim ACE-College.Weitere Informationen finden Sie unter [ACE college credit for certification exams](/learn/certifications/ace-credit-for-certification-exams). 
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Entwickeln von Azure Computing Solutions; Entwickeln für Azure Storage; Implementieren von Azure Security; Überwachung, Fehlerbehebung und Optimierung von Lösungen; und Verbindung zu und Nutzung von Azure Services und Drittanbieter-Services.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oZ7B
