--- a/learn-certs-pr/exams/mb-200.yml
+++ b/learn-certs-pr/exams/mb-200.yml
@@ -17,6 +17,8 @@ summary: |-
   Die Kandidaten sind in erster Linie dafür verantwortlich, das System so zu konfigurieren, dass es den Kundenbedürfnissen entspricht, Designaufgaben im Zusammenhang mit dem Implementieren neuer Funktionen sowie dem Implementieren und dem Test von Systemänderungen durchzuführen.
 
   Die Kandidaten planen das funktionale Design für Lösungen, setzen einen Application Lifecycle Management (ALM)-Prozess um, migrieren Daten und Objekte aus Legacy-Systemen und externen Systemen, integrieren Power Platform mit anderen Systemen und verwalten die Power Platform-Umgebung.
+
+  <div><strong><br/>Da diese Prüfung am 31. Dezember 2020 eingestellt wird, wird Microsoft Verweise zum „Common Data Service" auf "Microsoft Dataverse" nicht aktualisieren.</strong></div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Erkennen, Planen und Analysieren, Verwalten von Benutzererfahrungsdesign, Verwalten von Einheiten und Daten, Implementieren von Sicherheit, Implementieren von Integration, und Durchführen von Lösungsimplementierung und -prüfung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxb
