--- a/learn-certs-pr/exams/mb-400.yml
+++ b/learn-certs-pr/exams/mb-400.yml
@@ -16,6 +16,8 @@ summary: |-
   Die Kandidaten müssen über fundierte Kenntnisse in Power Apps modellbasierten Anwendungen in Dynamics 365 verfügen, einschließlich genauer Kenntnisse der Anpassung, Konfiguration, Integration und Erweiterbarkeit sowie der Grenzen und Einschränkungen. Die Kandidaten sollen über ein grundlegendes Verständnis der DevOps-Methoden für Power Apps modellbasierte Anwendungen in Dynamics 365 verfügen. Die Kandidaten müssen Daten bereitstellen, speichern und dokumentieren.
 
   Die Kandidaten sollten über Entwicklungserfahrung verfügen, die JavaScript, TypeScript, C#, HTML, .NET, Microsoft Azure, Office 365, RESTful Web Services, ASP.NET und Power BI umfasst.
+
+  <div><strong><br/>Da diese Prüfung am 31. Dezember 2020 eingestellt wird, wird Microsoft Verweise zum „Common Data Service" auf "Microsoft Dataverse" nicht aktualisieren.</strong></div>
 subTitle: 'Dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Erstellen eines technischen Designs, Konfigurieren eines Common Data Service (CDS), Erstellen und Konfigurieren von Power Apps, Konfigurieren der Geschäftsprozessautomatisierung, Erweitern der Benutzererfahrung, Erweitern der Plattform und Entwickeln von Integrationen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE42uM0
