--- a/learn-certs-pr/exams/md-101.yml
+++ b/learn-certs-pr/exams/md-101.yml
@@ -15,6 +15,8 @@ summary: |-
   Als Administratoren arbeiten die Kandidaten gewöhnlich mit dem Microsoft 365 Enterprise Administrator beim Design und der Implementieren einer Gerätestrategie zusammen, die den geschäftlichen Anforderungen einer modernen Organisation gerecht wird.
 
   Kandidaten müssen vertraut sein mit Microsoft 365 Workloads und müssen Erfahrung haben in der Bereitstellung, Konfigurierung und der Pflege von Windows 10 und Nicht-Windows Geräten und Technologien.
+
+  Wenn Sie diese Zertifizierungsprüfung bestehen, haben Sie möglicherweise Anspruch auf Anrechnung beim ACE-College.Weitere Informationen finden Sie unter [ACE college credit for certification exams](/learn/certifications/ace-credit-for-certification-exams). 
 subTitle: 'dieses examens misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Betriebssysteme bereitstellen und aktualisieren, Richtlinien und Profile verwalten, Geräte verwalten und schützen, Anwendungen und Daten verwalten. Wenn Sie die Exam 70-698 bestanden haben, bevor sie am 31. März 2019 abgelaufen ist, brauchen Sie nur MD-101 zu absolvieren, um die Modern Desktop Zertifizierung zu erhalten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJVD
