--- a/learn-certs-pr/exams/ms-700.yml
+++ b/learn-certs-pr/exams/ms-700.yml
@@ -7,16 +7,14 @@ uid: exam.ms-700
 displayName: MS-700
 summary: |-
   <div><div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Komepetenzmessung herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für dieses examens sind Microsoft Teams Administratoren in Unternehmen. Der Microsoft Teams Administrator konfiguriert, implementiert und verwaltet Office 365-Workloads für Microsoft Teams, die sich auf eine effiziente und effektive Zusammenarbeit und Kommunikation in einer Unternehmensumgebung konzentrieren.
+  Der Microsoft Teams Administrator konfiguriert, implementiert und verwaltet Office 365-Workloads für Microsoft Teams, die sich auf eine effiziente und effektive Zusammenarbeit und Kommunikation in einer Unternehmensumgebung konzentrieren.
 
-  Der Team administrator muss in der Lage sein, Team, Chats, Apps, Kanäle, Meetings, Audiokonferenzen, Live-Events und Anrufe zu planen, bereitzustellen und zu verwalten. Der Teamadministrator ist auch für das Upgrade von Skype für Unternehmen auf Teams verantwortlich.
+  Der Team administrator muss in der Lage sein, Team, Chats, Apps, Kanäle, Meetings, Audiokonferenzen, Live-Events und Anrufe zu planen, bereitzustellen und zu verwalten. Der Teamadministrator ist auch für das Upgrade von Skype für Unternehmen auf Teams verantwortlich. Kandidaten für diese Prüfung sollten über gute Kenntnisse in der Verwaltung von Teameinstellungen mit PowerShell verfügen.Der Teamadministrator verfügt über ein grundlegendes Verständnis für Integrationspunkte mit Anwendungen und Services, einschließlich, aber nicht beschränkt auf SharePoint, OneDrive for Business, Exchange, Azure AD und Office 365 Gruppen.Der Teamadministrator ist mit der Integration externer Anwendungen und Services vertraut.
 
   Der Teams-Administrator arbeitet mit Telefonie-Technikern zusammen, um erweiterte Sprachfunktionen in Microsoft Teams zu integrieren. Diese Funktion ist nicht verantwortlich für die Konfiguration des direkten Routings, der Konfiguration des Call Routing oder der Integration der Telefonie. Der Teamadministrator kann mit anderen Workload-Administratorfunktionen arbeiten, einschließlich Sicherheit und Compliance, Messaging, Netzwerk, Identität und Geräte.
-
-  Die Kandidaten für dieses examens sollten über gute Kenntnisse in der Verwaltung der Teameinstellungen mit PowerShell verfügen. Der Teamadministrator verfügt über ein grundlegendes Verständnis für Integrationspunkte mit Anwendungen und Diensten, einschließlich, aber nicht beschränkt auf SharePoint, OneDrive for Business, Exchange, Azure AD und Office 365 Groups. Der Teamadministrator ist mit der Integration externer Anwendungen und Dienste vertraut.
 subTitle: 'dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Planen und Konfigurieren einer Microsoft-Team-Umgebung, Verwalten von Chat, Anrufen und Meetings sowie Verwalten von Teams und App-Richtlinien.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43VcF
@@ -31,7 +29,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich ändern wird.
+- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat. 
 - Planen und Konfigurieren einer Microsoft-Teamumgebung (45 -50%)
 - Verwalten von chats, Anrufen und meetings (30 -35%)
 - Verwalten von Team- und App-Richtlinien (20 -25%)
