--- a/learn-certs-pr/exams/ms-900.yml
+++ b/learn-certs-pr/exams/ms-900.yml
@@ -16,6 +16,8 @@ summary: |-
   Kandidaten sollten über die erforderlichen Kenntnisse verfügen, um Lösungen zu empfehlen, die sich mit allgemeinen organisatorischen IT-Herausforderungen befassen, und um Microsoft 365-Lösungen von der Konkurrenz auf dem Markt abzuheben. Die Kandidaten sollten auch über grundlegende Kenntnisse der Angebote, Optimierung der Lizenzierung im Hinblick auf Kosteneffizienz und Supportoptionen für Unternehmen verfügen.
 
   Kandidaten sollten in der Lage sein, zwischen den Services und Produkten von Microsoft (Microsoft 365, Azure und Dynamics 365) zu unterscheiden.
+
+  Wenn Sie diese Zertifizierungsprüfung bestehen, haben Sie möglicherweise Anspruch auf Anrechnung beim ACE-College.Weitere Informationen finden Sie unter [ACE college credit for certification exams](/learn/certifications/ace-credit-for-certification-exams). 
 subTitle: Stellen Sie unter Beweis, dass Sie Cloud-Konzepte, Microsoft 365-Dienste und -Konzepte, Sicherheit, Compliance, Datenschutz und Vertrauen in Microsoft 365 sowie Microsoft 365 Preise und Support verstehen.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVw
