--- a/learn-certs-pr/exams/pl-900.yml
+++ b/learn-certs-pr/exams/pl-900.yml
@@ -11,6 +11,8 @@ summary: |-
   </div>
 
   Kandidaten für diese Prüfung möchten ihre Produktivität verbessern, indem sie die Funktionen der Power Platform verstehen, grundlegende Geschäftsprozesse mit Power Automate automatisieren, grundlegende Datenanalysen mit Power BI durchführen, effektiver handeln, indem sie einfache Power Apps-Erfahrungen erstellen und mithilfe von Power Virtual Agents leistungsstarke Chatbots erstellen.
+
+  Wenn Sie diese Zertifizierungsprüfung bestehen, haben Sie möglicherweise Anspruch auf Anrechnung beim ACE-College.Weitere Informationen finden Sie unter [ACE college credit for certification exams](/learn/certifications/ace-credit-for-certification-exams). 
 subTitle: Diese Prüfung misst Ihre Fähigkeit, den Geschäftswert von Power Platform zu beschreiben. Erkennen Sie die Kernkomponenten von Power Platform. Zeigen Sie die Funktionen von Power BI. Beschreiben der Funktionen von Power Apps. Zeigen Sie die Funktionen von Power Automate und den Geschäftswert von Power Virtual Agents.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Nnn
@@ -41,7 +43,9 @@ skills:
 - Zeigen Sie die Funktionen von Power Automate (15-20%)
 - Den Geschäftswert von Power Virtual Agents veranschaulichen (10-15%)
 roles:
-- developer
+- business-user
+- functional-consultant
+- student
 products:
 - power-platform
 courses:
