--- a/learn-certs-pr/d365-fundamentals.yml
+++ b/learn-certs-pr/d365-fundamentals.yml
@@ -8,7 +8,9 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badg
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
 
-  'Zeigen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz; gemischte Realität; die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung. '
+  Zeigen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz; gemischte Realität; die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung. 
+
+  <div><br/><strong>Hinweis&#58; Microsoft aktualisiert derzeit keine Verweise zum „Common Data Service" auf „Microsoft Dataverse".</strong></div> 
 subTitle: 'Zeigen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz (KI); gemischte Realität (MR); die Power Platform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.'
 levels:
 - beginner
@@ -18,7 +20,10 @@ skills:
 - Beschreiben modellbasierter Apps
 - Beschreiben von Finanz- und Betriebsanwendungen
 roles:
+- business-owner
+- business-user
 - functional-consultant
+- student
 type: fundamentals
 products:
 - dynamics-365
