--- a/learn-certs-pr/exams/az-303.yml
+++ b/learn-certs-pr/exams/az-303.yml
@@ -8,10 +8,10 @@ displayName: AZ-303
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Komepetenzmessung herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für diese Prüfung sollten über Fachkenntnisse beim Entwerfen und Implementieren von Lösungen verfügen, die unter Microsoft Azure ausgeführt werden, einschließlich Aspekten wie Computer, Netzwerk, Speicher und Sicherheit.
+  Kandidaten für diese Prüfung sollten über Fachkenntnisse beim Entwerfen und Implementieren von Lösungen verfügen, die unter Microsoft Azure ausgeführt werden, einschließlich Aspekten wie Computer, Netzwerk, Speicher und Sicherheit. Kandidaten sollten über fortgeschrittene Kenntnisse zur Verwaltung von Azure verfügen. Kandidaten sollten über Azure-Entwicklungs- und DevOps-Prozesse Bescheid wissen. 
 
   Zu den Aufgaben eines Azure Solution Architects gehören die Beratung von Stakeholdern und die Umsetzung von Geschäftsanforderungen in sichere, skalierbare und zuverlässige Cloud-Lösungen.
 
@@ -31,7 +31,7 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich ändern wird.
+- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat. 
 - Implementieren und Überwachen einer Azure-Infrastruktur (50-55%)
 - Implementierung von Management- und Sicherheitslösungen (25-30%)
 - Implementieren Sie Lösungen für Apps (10-15%)
