--- a/learn-certs-pr/exams/az-400.yml
+++ b/learn-certs-pr/exams/az-400.yml
@@ -7,7 +7,7 @@ uid: exam.az-400
 displayName: AZ-400
 summary: |-
   <div><div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Komepetenzmessung herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
 
   Kandidaten für diese Prüfung sollten über Fachkenntnisse im Umgang mit Menschen, Prozessen und Technologien haben, um kontinuierlich geschäftlichen Nutzen zu erzielen.
@@ -28,7 +28,7 @@ locales:
 levels:
 - advanced
 skills:
-- 'Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich ändern wird.'
+- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat. 
 - Entwickeln Sie eine Instrumentierungsstrategie (5-10%)
 - Entwicklung einer Zuverlässigkeitstechnik (SRE)-Strategie (5-10%)
 - Entwicklung eines Sicherheits- und Compliance-Plans (10-15%)
