--- a/learn-certs-pr/exams/az-900.yml
+++ b/learn-certs-pr/exams/az-900.yml
@@ -8,7 +8,7 @@ displayName: AZ-900
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 9. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div> 
+  <div><strong>Der Inhalt dieser Prüfung wird am 9. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat. </strong><br/><br/></div> 
   </div>
   
   Kandidaten für dieses examens sollten über grundlegende Kenntnisse der Cloud-Dienste und der Bereitstellung dieser Dienste mit Microsoft Azure verfügen. Die Prüfung richtet sich an Kandidaten, die gerade erst mit Cloud-basierten Lösungen und Services arbeiten oder neu in Azure sind.
@@ -16,6 +16,8 @@ summary: |-
   Die Prüfung zu Azure-Grundlagen bietet die Möglichkeit, Kenntnisse über Cloud-Konzepte, Azure-Services, Azure-Workloads, Sicherheit und Datenschutz in Azure sowie Azure-Preise und -Support nachzuweisen. Kandidaten sollten mit den allgemeinen Technologiekonzepten vertraut sein, einschließlich der Konzepte für Netzwerk, Speicher, Computer, Anwendungsunterstützung und Anwendungsentwicklung.
 
   Azure-Grundlagen können verwendet werden, um sich auf andere rollenbasierte Azure- oder Spezialzertifizierungen vorzubereiten. Dies ist jedoch keine Voraussetzung für eine dieser Zertifizierungen.
+
+  Wenn Sie diese Zertifizierungsprüfung bestehen, haben Sie möglicherweise Anspruch auf Anrechnung beim ACE-College.Weitere Informationen finden Sie unter [ACE college credit for certification exams](/learn/certifications/ace-credit-for-certification-exams). 
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden Konzepte zu verstehen: Cloud-Konzepte; Core Azure Services; Sicherheit, Datenschutz, Compliance, Trust und Azure-Preisgestaltung und -Support.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUY
@@ -38,13 +40,19 @@ locales:
 levels:
 - beginner
 skills:
-- Der Inhalt dieser Prüfung wird am 9. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich ändern wird.
-- Cloud-Konzepte beschreiben (15-20%)
-- Beschreiben der Azure-Kern-Services (30-35%)
-- Sicherheit, Datenschutz, Compliance und Vertrauen beschreiben (25-30%)
-- Azure-Preisgestaltung für Servicevereinbarungen und Lebenszyklen erläutern (20-25%)
+- Der Inhalt dieser Prüfung wird am 9. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat. 
+- Beschreiben der Cloud-Konzepte (20-25%)
+- Beschreiben der Azure-Core-Services (15-20%)
+- Beschreiben von Kernlösungen und Verwaltungstools in Azure (10-15%)
+- Beschreiben der allgemeinen Sicherheit sowie der Netzwerksicherheitsfunktionen (10-15%)
+- Beschreiben von Identitäts-, Governance-, Datenschutz- und Compliance-Funktionen (20-25%)
+- Beschreiben des Azure-Kostenmanagements und der Servicevereinbarungen (10-15%)
 roles:
+- administrator
+- business-user
 - developer
+- student
+- technology-manager
 products:
 - azure
 courses:
