--- a/learn-certs-pr/exams/dp-200.yml
+++ b/learn-certs-pr/exams/dp-200.yml
@@ -8,14 +8,14 @@ displayName: DP-200
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Komepetenzmessung herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
 
   Kandidaten für diese Prüfung sind Microsoft Azure-Dateningenieure, die mit Wirtschaftsakteuren zusammenarbeiten, um die Datenanforderungen für die Implementierung von Datenlösungen zu ermitteln und zu erfüllen, die Azure-Datenservices verwenden.
 
   Die Datentechniker von Azure sind für datenbezogene Aufgaben verantwortlich, wie die Bereitstellung von Datenspeicherdiensten, die Aufnahme von Streaming- und Batchdaten, die Transformation von Daten, die Implementieren von Sicherheitsanforderungen, die Implementieren von Datenhaltungsrichtlinien, die Identifizierung von Leistungsengpässen und den Zugriff auf externe Datenquellen.
 
-  Die Kandidaten für dieses examens müssen in der Lage sein, Datenlösungen zu implementieren, die die folgenden Azure Services verwenden&#58; Azure Cosmos DB, Azure SQL Database, Azure Synapse Analytics (ehemals Azure SQL DW), Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks und Azure Blob Storage.
+  Kandidaten für diese Prüfung müssen in der Lage sein, Datenlösungen zu implementieren, die die folgenden Azure-Services verwenden: Azure Cosmos DB, Azure Synapse Analytics (ehemals Azure SQL DW), Azure Data Factory, Azure Stream Analytics, Azure Databricks und Azure Blob-Storage. 
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Datenspeicherlösungen implementieren, Datenverarbeitung verwalten und entwickeln sowie Datenlösungen überwachen und optimieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzx2
@@ -29,7 +29,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich ändern wird.
+- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat. 
 - Implementieren von Datenspeicherlösungen (40-45%)
 - Verwalten und Entwickeln der Datenverarbeitung (25-30%)
 - Überwachen und Optimieren von Datenlösungen (30-35%)
