--- a/learn-certs-pr/exams/mb-240.yml
+++ b/learn-certs-pr/exams/mb-240.yml
@@ -8,7 +8,7 @@ displayName: MB-240
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 10. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 10. November 2020 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat. </strong><br/><br/></div>
   </div>
 
   Kandidaten für diese Prüfung sind Dynamics 365-Berater für Kundenbindung mit Fachkenntnissen im Außendienst. Die Teilnehmer sind für die Implementierung von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus des Außendienstes vervollständigen.
@@ -26,7 +26,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 10. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
+- Der Inhalt dieser Prüfung wird am 10. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat. 
 - Außendienstanwendungen konfigurieren (15-20%)
 - Verwaltung von Arbeitsaufträgen (15-20%)
 - Arbeitsaufträge planen und versenden (25-30%)
