--- a/learn-certs-pr/exams/mb-901.yml
+++ b/learn-certs-pr/exams/mb-901.yml
@@ -16,6 +16,10 @@ summary: |-
   Die Kandidaten sollten über ein funktionales Verständnis der Dynamics 365-Funktionen und des Microsoft Cloud Computing verfügen.
 
   Die Kandidaten dieser Prüfung sollten über allgemeine Kenntnisse oder einschlägige Berufserfahrung in einer Umgebung der Informationstechnologie (IT) verfügen. Die Kandidaten sollten auch über ein grundlegendes Verständnis von Geschäftsszenarien und Erfahrungen bei der Bewältigung von Geschäfts-, Rechts- und Sicherheitsanforderungen für IT-Projekte verfügen.
+
+  Wenn Sie diese Zertifizierungsprüfung bestehen, haben Sie möglicherweise Anspruch auf Anrechnung beim ACE-College.Weitere Informationen finden Sie unter [ACE college credit for certification exams](/learn/certifications/ace-credit-for-certification-exams). 
+
+  <div><br/><strong>Hinweis: Microsoft aktualisiert derzeit keine Verweise zum „Common Data Service" auf „Microsoft Dataverse".</strong></div> 
 subTitle: Dieses Examen misst Ihre Fähigkeit, Microsoft Dynamics 365 zu verstehen. künstliche Intelligenz; gemischte Realität; die Energieplattform; Cloud-Konzepte; Cloud-Sicherheit; rollenbasierte Sicherheit in Dynamics 365; Gemeinsamer Datendienst; Datenverwaltungsrahmen; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4n1DO
@@ -41,7 +45,10 @@ skills:
 - Beschreiben modellbasierter Apps (25-30%)
 - Beschreiben von Finanz- und Betriebsanwendungen (25-30%)
 roles:
+- business-owner
+- business-user
 - functional-consultant
+- student
 products:
 - dynamics-365
 courses:
