--- a/learn-certs-pr/exams/ms-600.yml
+++ b/learn-certs-pr/exams/ms-600.yml
@@ -8,7 +8,7 @@ displayName: MS-600
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Komepetenzmessung herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
 
   Kandidaten für diese Prüfung sind Microsoft 365 Developers, die Anwendungen und Lösungen entwerfen, erstellen, testen und warten, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
@@ -30,11 +30,11 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich ändern wird.
+- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat. 
 - Microsoft Identity einrichten (20-25%)
-- Apps mit Microsoft Graph erstellen (20-25%)
-- SharePoint erweitern und anpassen (20-25%)
-- Teams erweitern (15-20%)
+- Erstellen Sie Apps mit Microsoft Graph (15-20%)
+- Erweitern und Anpassen von SharePoint (15-20%)
+- Bauen Sie Microsoft-Teams aus (20-25%)
 - Office erweitern (15-20%)
 roles:
 - developer
