--- a/learn-certs-pr/power-apps-and-d365-developer-associate.yml
+++ b/learn-certs-pr/power-apps-and-d365-developer-associate.yml
@@ -11,6 +11,8 @@ summary: |-
   <div><strong>DIESE ZERTIFIZIERUNG WIRD AM 31. DEZEMBER 2020 EINGESTELLT. Nach diesem Datum können Sie diese Zertifizierung nicht mehr erhalten. Alle Zertifizierungen, die Sie vor deren Ablaufen erhalten haben, werden weiterhin auf Ihrem Transkript im <a href="https://aka.ms/certdashboard">Zertifizierungs-Dashboard angezeigt</a>.</strong><br/><br/></div></div>
 
   Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von Dynamics 365-Implementierungen verantwortlich. Die Kandidaten implementieren Komponenten der Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrung, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen umfassen.
+
+  <div><strong><br/>Da diese Zertifizierung am 31. Dezember 2020 in den Ruhestand geht, aktualisiert Microsoft die Verweise von "Common Data Service" nicht auf "Microsoft Dataverse".</strong></div> 
 subTitle: Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von Dynamics 365-Implementierungen verantwortlich.
 levels:
 - intermediate
